--- a/_config.yml
+++ b/_config.yml
@@ -15,9 +15,9 @@
 # in the templates via {{ site.myvariable }}.
 title: DSC 204A
 description: Scalable Data Systems
-author: Hao Zhang
-email: dsc204a-w24@gmail.com
-baseurl: '/dsc204a-w24' # the subpath of your site, e.g. /blog
+author: Umesh Bellur
+email: ubellur@ucsd.edu
+baseurl: '/dsc204a-sp25' # the subpath of your site, e.g. /blog
 url: '' # the base hostname & protocol for your site, e.g. http://example.com
 exclude: ["Gemfile", "Gemfile.lock", "LICENSE", "vendor", "bundle"]
 #logo: "/data8logo.png"
@@ -30,13 +30,13 @@ heading_anchors: true
 permalink: pretty
 aux_links:
   Office Hours:
-    - '/dsc204a-w24/officehours'
+    - '/dsc204a-sp25/officehours'
   Canvas:
-    - 'https://canvas.ucsd.edu/courses/53288'
+    - 'https://canvas.ucsd.edu/courses/65050'
   Piazza:
-    - 'https://piazza.com/ucsd/winter2024/dsc204a'
+    - 'https://piazza.com/ucsd/spring2025/dsc204a'
   GradeScope:
-    - 'https://www.gradescope.com/courses/697914'
+    - 'https://www.gradescope.com/courses/993741'
   # Feedback Form:
   #   - 'https://forms.gle/gHhrqEGCGE1S4N1r5'
 
