--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Check Ruby Version
+        run: |
+         which ruby || echo "Ruby not found"
+         ruby -v || echo "Ruby is not installed"
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
