--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -54,7 +54,8 @@ jobs:
       - name: Upload artifact
         # Automatically uploads an artifact from the './_site' directory by default
         uses: actions/upload-pages-artifact@v3
-
+        with:
+          path: ./_site  # Ensure the built Jekyll site is uploaded
   # Deployment job
   deploy:
     environment:
