--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: DSC 204A
 description: Scalable Data Systems
 author: Umesh Bellur
 email: ubellur@ucsd.edu
-baseurl: '/dsc204a-sp25' # the subpath of your site, e.g. /blog
+baseurl: '/dsc204a' # the subpath of your site, e.g. /blog
 url: 'ubellur.github.io' # the base hostname & protocol for your site, e.g. http://example.com
 exclude: ["Gemfile", "Gemfile.lock", "LICENSE", "vendor", "bundle"]
 #logo: "/data8logo.png"
@@ -30,7 +30,7 @@ heading_anchors: true
 permalink: pretty
 aux_links:
   Office Hours:
-    - '/dsc204a-sp25/officehours'
+    - '/dsc204a/officehours'
   Canvas:
     - 'https://canvas.ucsd.edu/courses/65050'
   Piazza:
